# Hyprland-OBS-Browser-Plugin

./: CMakeLists.txt  README.md  setup_hyprdock.sh
src/: plugin_main.cpp
